# motor_control

./: CMakeLists.txt  README.md  package.xml
config/: motor_manager.yaml
msg/: MotorCommonMsg.msg  MotorControlCmd.msg  MotorState.msg
our_hw_sdk/: CMakeLists.txt
our_hw_sdk/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  robot_pan_control-msg-extras.cmake.develspace.in
our_hw_sdk/catkin_generated/installspace/: robot_pan_control-msg-extras.cmake  robot_pan_control-msg-paths.cmake  robot_pan_control.pc  robot_pan_controlConfig.cmake
our_hw_sdk/catkin_generated/stamps/robot_pan_control/: package.xml.stamp
our_hw_sdk/cmake/: robot_pan_control-genmsg-context.py  robot_pan_control-genmsg.cmake
our_hw_sdk/src/communication/: async_can.cpp  async_can.h  async_listener_interface.hpp  async_serial.cpp  async_serial.h  communication_device.hpp  ring_buffer.hpp
our_hw_sdk/src/communication/utils/: communication_typecasting.hpp
our_hw_sdk/src/hal/: motor.h  serial_com_motor.cpp  serial_com_motor.h  serial_device_manager.cpp  serial_device_manager.h  stopwatch.h
our_hw_sdk/src/hal/protocol/: readme.md  serial_port_common_def.h
our_hw_sdk/src/hal/user_hw/: pan_tilt_motor.cpp  pan_tilt_motor.h  pan_tilt_motor_manager.cpp  pan_tilt_motor_manager.h  readme.md
our_hw_sdk/src/hal/user_hw/motor_cfg/: RMDL_RS485_def.h  motor_manager.yaml  pan_tilt_motor_msg_process.h
our_hw_sdk/src/tests/devel_tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_motor_cmd.cpp  test_serial_communication_card.cpp
src/: motor_config_service.cpp  motor_node.cpp
srv/: ManagerConfig.srv  MaxSpeed.srv  MotorCommon.srv  MotorConfig.srv
